Fix alignment of left and right columns of step pages. Other layout fixes.

--- a/app/assets/stylesheets/pages/step.scss
+++ b/app/assets/stylesheets/pages/step.scss
@@ -8,6 +8,7 @@
   .step-header {
     background-color: $color-mediumblue;
     color: $white;
+    margin-bottom: 30px;
   }
 
   .step-title {
@@ -42,7 +43,7 @@
     position: absolute;
     left: 0;
     top: 0;
-    background: linear-gradient(to bottom,  rgba(255,255,255,0) 75%,rgba(255,255,255,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    background: linear-gradient(to bottom, rgba(255,255,255,0) 250px,rgba(255,255,255,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     pointer-events: none;
   }
 
